--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>C DESIGN CODE / Chris Edwards Portfolio</title>
+    <title>© Copyright 2023 Chris Edwards / Design UX Code</title>
     <link rel="stylesheet" href="styles/styles.css">
     <link rel="stylesheet" href="styles/cdev-grid-boiler-plate.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -17,78 +17,9 @@
         <!-- <i class="fa-brands fa-instagram"></i> -->
     </header>
         <!-- navigation desktop -->
-        <nav class="nav-desktop control-desktop active-btn-desktop" style="display: none;">
-            <div class="nav-grid">
-                <div class="menu-item-desktop logotype-desktop col-1-span-4">
-                    <h1 class="logotype-desktop">C DESIGN CODE</h1>
-                </div>
-                <div class="menu-item-desktop col-5-span-1">
-                    <p class="menu-text">Home</p>
-                    <svg class="svg-base" width="inherit" height="inherit" viewBox="0 0 10 6" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M1 0.878906L5.24264 5.12155L9.48528 0.878906" stroke="currentColor"/>
-                    </svg>
-                </div>
-                <div class="menu-item-desktop col-6-span-1">
-                    <p class="menu-text">Work</p>
-                    <svg class="svg-base" width="inherit" height="inherit" viewBox="0 0 10 6" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M1 0.878906L5.24264 5.12155L9.48528 0.878§906" stroke="currentColor"/>
-                    </svg>
-                </div>
-                <div class="menu-item-desktop col-7-span-1">
-                    <p class="menu-text">Blog</p>
-                    <svg class="svg-base" width="inherit" height="inherit" viewBox="0 0 10 6" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M1 0.878906L5.24264 5.12155L9.48528 0.878906" stroke="currentColor"/>
-                    </svg>
-                </div>
-                <div class="menu-item-desktop col-8-span-1 justify-flex-end">
-                    <p class="menu-text">Contact</p>
-                    <svg class="svg-base" width="inherit" height="inherit" viewBox="0 0 10 6" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M1 0.878906L5.24264 5.12155L9.48528 0.878906" stroke="currentColor"/>
-                    </svg>
-                </div>
-            </div>
-        </nav>
-        <!-- navigation mobile -->
-        <nav class="menu-mobile mob-none">
-            <div class="control menu active-btn">
-                <div class="menu-item">
-                    <p class="menu-text">Home</p>
-                    <svg class="svg-base" width="inherit" height="inherit" viewBox="0 0 10 6" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M1 0.878906L5.24264 5.12155L9.48528 0.878906" stroke="currentColor"/>
-                    </svg>
-                </div>
-                <div class="menu-item">
-                    <p class="menu-text">WORK</p>
-                    <svg class="svg-base" width="inherit" height="inherit" viewBox="0 0 10 6" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M1 0.878906L5.24264 5.12155L9.48528 0.878906" stroke="currentColor"/>
-                    </svg>
-                </div>
-                <div class="menu-item">
-                    <p class="menu-text">PROJECTS</p>
-                    <svg class="svg-base" width="inherit" height="inherit" viewBox="0 0 10 6" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M1 0.878906L5.24264 5.12155L9.48528 0.878906" stroke="currentColor"/>
-                    </svg>
-                </div>
-                <div class="menu-item">
-                    <p class="menu-text">BLOG</p>
-                    <svg class="svg-base" width="inherit" height="inherit" viewBox="0 0 10 6" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M1 0.878906L5.24264 5.12155L9.48528 0.878906" stroke="currentColor"/>
-                    </svg>
-                </div>
-                <div class="menu-item">
-                    <p class="menu-text">CONTACT</p>
-                    <svg class="svg-base" width="inherit" height="inherit" viewBox="0 0 10 6" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M1 0.878906L5.24264 5.12155L9.48528 0.878906" stroke="currentColor"/>
-                    </svg>
-                </div>
-            </div>
-        </nav>
+            <h1>© Copyright 2023 Chris Edwards / Design UX Code<br>site under maintenance</h1>
     <main>
         <section class="section sec2 sec2-grid about"></section>
-        <section class="section sec3 gallery"></section>
-        <section class="section sec4 blog"></section>
-        <section class="section sec5 contact"></section>
-    </main>
     <!-- js test-->
     <script src="js/my-script.js"></script>
 </body>
