--- a/index.html
+++ b/index.html
@@ -14,13 +14,10 @@
 </head>
 <body class="main-content">
     <header class="section sec1 header active">
-        <!-- <i class="fa-brands fa-instagram"></i> -->
     </header>
-        <!-- navigation desktop -->
-            <h1>© Copyright 2023 Chris Edwards / Design UX Code<br>site under maintenance</h1>
     <main>
-        <section class="section sec2 sec2-grid about"></section>
-    <!-- js test-->
+        <section class=""></section>
+            <h1>© Copyright 2023 Chris Edwards Design / UX / Code<br>Website under maintenance.</h1>
     <script src="js/my-script.js"></script>
 </body>
 </html>
