--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </header>
     <main>
         <section class=""></section>
-            <h1>© Copyright 2023 Chris Edwards Design / UX / Code<br>Website under maintenance.</h1>
+            <h1>© Copyright 2023 Chris Edwards Design / UX / Code<br>* Website under maintenance</h1>
     <script src="js/my-script.js"></script>
 </body>
 </html>
