--- a/index.html
+++ b/index.html
@@ -16,8 +16,11 @@
     <header class="section sec1 header active">
     </header>
     <main>
-        <section class=""></section>
-            <h1>© Copyright 2023 Chris Edwards Design / UX / Code<br>* Website under maintenance</h1>
+        <section class="">
+            <h1>© Copyright 2023 Chris Edwards Design / UX / Code
+                <br>* Website under maintenance.
+            </h1>
+        </section>
     <script src="js/my-script.js"></script>
 </body>
 </html>
