--- a/index.html
+++ b/index.html
@@ -16,10 +16,9 @@
     <header class="section sec1 header active">
     </header>
     <main>
-        <section class="">
-            <h1>© Copyright 2023 Chris Edwards Design / UX / Code
-                <br>* Website under maintenance.
-            </h1>
+        <section class="section--maintenance">
+            <h1>© Copyright 2023 Chris Edwards<br>/ Design UX Code</h1>
+            <p>site under maintenance</p>
         </section>
     <script src="js/my-script.js"></script>
 </body>
