--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
     </header>
     <main>
         <section class="section--maintenance">
-            <h1>© Copyright 2023 Chris Edwards<br>/ Design UX Code</h1>
-            <p>site under maintenance</p>
+            <h1 class="maintenance--title-h1">Chris Edwards Design + UX + Code</h1>
+            <p class="maintenance--message">* site under maintenance</p>
+            <p class="maintenance--copyright">©Copyright 2023 Chris Edwards Design</p>
         </section>
     <script src="js/my-script.js"></script>
 </body>
