--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </header>
     <main>
         <section class="section--maintenance">
-            <h1 class="maintenance--title-h1">Chris Edwards Design + UX + Code</h1>
+            <h1 class="maintenance--title">Chris Edwards Design + UX + Code</h1>
             <p class="maintenance--message">* site under maintenance</p>
             <p class="maintenance--copyright">©Copyright 2023 Chris Edwards Design</p>
         </section>
