--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <main>
         <section class="section--maintenance">
             <h1 class="maintenance--title">Chris Edwards Design + UX + Code</h1>
-            <p class="maintenance--message">* site under maintenance</p>
+            <p class="maintenance--message">* Site under maintenance</p>
             <p class="maintenance--copyright">©Copyright 2023 Chris Edwards Design. All rights reserved.</p>
         </section>
     <script src="js/my-script.js"></script>
