--- a/index.html
+++ b/index.html
@@ -16,10 +16,13 @@
     <header class="section sec1 header active">
     </header>
     <main>
-        <section class="section--maintenance">
+        <section class="container-maintenance">
             <h1 class="maintenance--title">Chris Edwards Design + UX + Code</h1>
             <p class="maintenance--message">* Site under maintenance</p>
-            <p class="maintenance--copyright">©Copyright 2023 Chris Edwards Design.<br>All rights reserved.</p>
+            <copyright class="container-maintenance--copyright">
+                <p class="maintenance--copyright-p">©Copyright 2023 Chris Edwards Design.</p>
+                <p class="maintenance--copyright-p">All rights reserved.</p>
+            </section>
         </section>
     <script src="js/my-script.js"></script>
 </body>
