--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <copyright class="container-maintenance--copyright"> 
                 <p class="maintenance--copyright-p">©Copyright 2023 Chris Edwards Design.</p>
                 <p class="maintenance--copyright-p">All rights reserved.</p>
-            </section>
+            </copyright>
         </section>
     <script src="js/my-script.js"></script>
 </body>
