--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <p class="maintenance--message">* Site under maintenance</p>
             <copyright class="container-maintenance--copyright"> 
                 <p class="maintenance--copyright-p">©Copyright 2023 Chris Edwards Design.</p>
-                <p class="maintenance--copyright-p">All rights reserved.</p>
+<!--                 <p class="maintenance--copyright-p">All rights reserved.</p> -->
             </copyright>
         </section>
     <script src="js/my-script.js"></script>
