--- a/index.html
+++ b/index.html
@@ -11,19 +11,24 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Space+Mono&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <script src="maintenance-game.js"></script>
 </head>
 <body class="main-content">
     <header class="section sec1 header active">
     </header>
     <main>
         <section class="container-maintenance">
-            <h1 class="maintenance--title">Chris Edwards Design + UX + Code</h1>
-            <p class="maintenance--message">* Site under maintenance</p>
+            <div class="maintenance--info">
+                <h1 class="maintenance--title">Chris Edwards Design + UX + Code</h1>
+                <p class="maintenance--message">* Site under maintenance</p>
+            </div>
+            <div id="contParent" class="maintenance--game-container">
+                <span id="contMove" class="maintenance--game-btn">DESIGN</span>
+            </div>
             <copyright class="container-maintenance--copyright"> 
                 <p class="maintenance--copyright-p">©Copyright 2023 Chris Edwards Design.</p>
-<!--                 <p class="maintenance--copyright-p">All rights reserved.</p> -->
+                <!-- <p class="maintenance--copyright-p">All rights reserved.</p> -->
             </copyright>
         </section>
-    <script src="js/my-script.js"></script>
 </body>
 </html>
