--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <p class="maintenance--message">* Site under maintenance</p>
             </div>
             <div id="contParent" class="maintenance--game-container">
-                <span id="contMove" class="maintenance--game-btn">DESIGN</span>
+                <span id="contMove" class="maintenance--game-btn">COMING SOON</span>
             </div>
             <copyright class="container-maintenance--copyright"> 
                 <p class="maintenance--copyright-p">©Copyright 2023 Chris Edwards Design.</p>
