--- a/index.html
+++ b/index.html
@@ -19,15 +19,65 @@
     <main>
         <section class="container-maintenance">
             <div class="maintenance--info">
-                <h1 class="maintenance--title">Chris Edwards Design + UX + Code</h1>
-                <p class="maintenance--message">* Site under maintenance</p>
+                <div class="maintenance--content">
+                    <h1 class="maintenance--title">Chris Edwards Designs</h1>
+                    <h2 class="maintenance--title">DESIGN + UX + CODE</h2>
+                </div>
+                <div class="maintenance--content">
+                    <p class="maintenance--message">SITE UNDER MAINTENANCE</p>
+                    <div class="container-countdown--mob">
+                        <h2 class="maintenance--title-h2">LIVE:</h2>
+                        <div id="countdownTimerMob" class="maintenance--time"></div>
+                    </div>
+                </div>
             </div>
             <div id="contParent" class="maintenance--game-container">
                 <span id="contMove" class="maintenance--game-btn">COMING SOON</span>
             </div>
-            <copyright class="container-maintenance--copyright"> 
-                <p class="maintenance--copyright-p">©Copyright 2023 Chris Edwards Design.</p>
-                <!-- <p class="maintenance--copyright-p">All rights reserved.</p> -->
+            <form id="formPosition" class="maintenance-container--form form-slide-left" action="mailto:chris@chrisedwardsdesign.com" method="POST" enctype="multipart/form-data">
+                <div id="drawerTriggerClose" class="maintenance--input maintenance--input-header-bg-scolor maintenance--form-marquee-container">
+                  <marquee class="maintenance--title-h2 maintenance--form-marque">ALL ENQUIRIES: chris@chrisedwardsdesign.com</marquee>
+                  <div id="maintenance--svg-trigger-1" class="maintenance--svg-container">
+                    <svg id="drawerTriggerMinusSvg" class="maintenance--svg-close" width="auto" height="auto" viewBox="0 0 19 1" fill="inherit" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M18.6924 0.5H0.307617" stroke="#151714"/>
+                    </svg>
+                    <svg id="drawerTriggerCloseSvg" class="maintenance--svg-close svg-hide" width="auto" height="auto" viewBox="0 0 13 13" fill="inherit" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M14 14L1 1" stroke="#151714"/>
+                      <path d="M1 14L14 1" stroke="#151714"/>
+                    </svg>   
+                  </div>                 
+                </div>
+                <div class="maintenance--input">
+                  <label for="name">NAME:</label>
+                  <input type="text" id="name" name="name" placeholder="name" required>
+                </div>
+                <div class="maintenance--input">
+                  <label for="email">EMAIL:</label>
+                  <input type="email" id="email" name="email" placeholder="email" required>
+                </div>
+                <div class="maintenance--input">
+                  <label for="message" class="maintenance--input--message">MESSAGE:</label>
+                  <textarea id="message" name="message" placeholder="message" required></textarea>
+                </div>
+                <div class="maintenance--input">
+                  <button id="maintenance--form-submit" type="submit">SUBMIT
+                    <svg class="maintenance--form-submit--svg" width="auto" height="auto" viewBox="0 0 13 14" fill="inherit" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M6 12.6562L12 6.65625L6 0.65625" stroke="inherit"/>
+                      <path d="M-6.00782e-07 6.65625H12" stroke="inherit"/>
+                    </svg>                      
+                  </button>
+                </div>
+              </form>
+            <div id="formOverlay" class="maintenance--form-overlay form-hide"></div>
+            <div class="container-countdown--desk">
+                <div id="countdownTimerDesk" class="maintenance--time"></div>
+                <h2 class="maintenance--title-h2">/ LIVE</h2>
+            </div>
+            <div id="formTriggerOpen" class="container-maintenance--contact">
+                <h3 class="maintenance--contact-h3">CONTACT</h3>
+              </div>
+            <copyright class="container-maintenance--copyright">
+                <p class="maintenance--copyright-p">Copyright 2023 Chris Edwards Design.</p>
             </copyright>
         </section>
 </body>
