--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <div id="contParent" class="maintenance--game-container">
                 <span id="contMove" class="maintenance--game-btn">COMING SOON</span>
             </div>
-            <form id="formPosition" class="maintenance-container--form form-slide-left" action="mailto:chris@chrisedwardsdesign.com" method="POST" enctype="multipart/form-data">
+            <form id="formPosition" class="maintenance-container--form form-slide-left" action="mailto:chris@chrisedwardsdesign.com" method="POST" enctype="multipart/form-data" user-scalable="no">
                 <div id="drawerTriggerClose" class="maintenance--input maintenance--input-header-bg-scolor maintenance--form-marquee-container">
                   <marquee class="maintenance--title-h2 maintenance--form-marque">ALL ENQUIRIES: chris@chrisedwardsdesign.com</marquee>
                   <div id="maintenance--svg-trigger-1" class="maintenance--svg-container">
