--- a/index.html
+++ b/index.html
@@ -49,18 +49,18 @@
                 </div>
                 <div class="maintenance--input">
                   <label for="name">NAME:</label>
-                  <input type="text" id="name" name="name" placeholder="name" required>
+                  <input type="text" id="name" name="name" placeholder="name" user-scalable="no" required>
                 </div>
                 <div class="maintenance--input">
                   <label for="email">EMAIL:</label>
-                  <input type="email" id="email" name="email" placeholder="email" required>
+                  <input type="email" id="email" name="email" placeholder="email" ruser-scalable="no" equired>
                 </div>
                 <div class="maintenance--input">
                   <label for="message" class="maintenance--input--message">MESSAGE:</label>
-                  <textarea id="message" name="message" placeholder="message" required></textarea>
+                  <textarea id="message" name="message" placeholder="message" user-scalable="no" required></textarea>
                 </div>
                 <div class="maintenance--input">
-                  <button id="maintenance--form-submit" type="submit">SUBMIT
+                  <button id="maintenance--form-submit" user-scalable="no" type="submit">SUBMIT
                     <svg class="maintenance--form-submit--svg" width="auto" height="auto" viewBox="0 0 13 14" fill="inherit" xmlns="http://www.w3.org/2000/svg">
                       <path d="M6 12.6562L12 6.65625L6 0.65625" stroke="inherit"/>
                       <path d="M-6.00782e-07 6.65625H12" stroke="inherit"/>
