--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <section class="container-maintenance">
             <div class="maintenance--info">
                 <div class="maintenance--content">
-                    <h1 class="maintenance--title">Chris Edwards Designs</h1>
+                    <h1 class="maintenance--title">CHRIS EDWARDS</h1>
                     <h2 class="maintenance--title">DESIGN + UX + CODE</h2>
                 </div>
                 <div class="maintenance--content">
