--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <h2 class="maintenance--title">DESIGN + UX + CODE</h2>
                 </div>
                 <div class="maintenance--content">
-                    <p class="maintenance--message">SITE UNDER MAINTENANCE</p>
+                    <p class="maintenance--message">UNDER MAINTENANCE</p>
                     <div class="container-countdown--mob">
                         <h2 class="maintenance--title-h2">LIVE:</h2>
                         <div id="countdownTimerMob" class="maintenance--time"></div>
@@ -41,30 +41,36 @@
                     <svg id="drawerTriggerMinusSvg" class="maintenance--svg-close" width="auto" height="auto" viewBox="0 0 19 1" fill="inherit" xmlns="http://www.w3.org/2000/svg">
                       <path d="M18.6924 0.5H0.307617" stroke="#151714"/>
                     </svg>
-                    <svg id="drawerTriggerCloseSvg" class="maintenance--svg-close svg-hide" width="auto" height="auto" viewBox="0 0 13 13" fill="inherit" xmlns="http://www.w3.org/2000/svg">
+
+                    <svg id="drawerTriggerCloseSvg" class="maintenance--svg-close svg-hide" width="auto" height="1auto5" viewBox="0 0 24 15" fill="inherit" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M1.04932 1L23.566 14" stroke="inherit"/>
+                      <path d="M1.04932 14L23.566 1" stroke="inherit"/>
+                    </svg>
+
+                    <!-- <svg id="drawerTriggerCloseSvg" class="maintenance--svg-close svg-hide" width="auto" height="auto" viewBox="0 0 13 13" fill="inherit" xmlns="http://www.w3.org/2000/svg">
                       <path d="M14 14L1 1" stroke="#151714"/>
                       <path d="M1 14L14 1" stroke="#151714"/>
-                    </svg>   
+                    </svg>    -->
                   </div>                 
                 </div>
                 <div class="maintenance--input">
                   <label for="name">NAME:</label>
-                  <input type="text" id="name" name="name" placeholder="name" user-scalable="no" required>
+                  <input type="text" id="name" name="name" placeholder="your name" user-scalable="no" required>
                 </div>
                 <div class="maintenance--input">
                   <label for="email">EMAIL:</label>
-                  <input type="email" id="email" name="email" placeholder="email" ruser-scalable="no" equired>
+                  <input type="email" id="email" name="email" placeholder="your email" ruser-scalable="no" equired>
                 </div>
                 <div class="maintenance--input">
                   <label for="message" class="maintenance--input--message">MESSAGE:</label>
-                  <textarea id="message" name="message" placeholder="message" user-scalable="no" required></textarea>
+                  <textarea id="message" name="message" placeholder="write a message" user-scalable="no" required></textarea>
                 </div>
                 <div class="maintenance--input">
                   <button id="maintenance--form-submit" user-scalable="no" type="submit">SUBMIT
-                    <svg class="maintenance--form-submit--svg" width="auto" height="auto" viewBox="0 0 13 14" fill="inherit" xmlns="http://www.w3.org/2000/svg">
-                      <path d="M6 12.6562L12 6.65625L6 0.65625" stroke="inherit"/>
-                      <path d="M-6.00782e-07 6.65625H12" stroke="inherit"/>
-                    </svg>                      
+                    <svg class="maintenance--form-submit--svg"  width="auto" height="auto" viewBox="0 0 20 20" fill="inherit" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M13 16L19 10L13 4" stroke="inherit"/>
+                      <path d="M0.615225 10H19" stroke="inherit"/>
+                    </svg>   
                   </button>
                 </div>
               </form>
@@ -75,6 +81,15 @@
             </div>
             <div id="formTriggerOpen" class="container-maintenance--contact">
                 <h3 class="maintenance--contact-h3">CONTACT</h3>
+                <svg id="burgerOpen" class="maintenance--svg-close" width="auto" height="auto" viewBox="0 0 27 15" fill="inherit" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M0.307617 7.5H26.3076" stroke="inherit"/>
+                  <path d="M0.307617 14H26.3076" stroke="inherit"/>
+                  <path d="M0.307617 1H26.3076" stroke="inherit"/>
+                </svg>
+                <svg id="burgerClose" class="maintenance--svg-close-2 svg-hide" width="auto" height="1auto5" viewBox="0 0 24 15" fill="inherit" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M1.04932 1L23.566 14" stroke="inherit"/>
+                  <path d="M1.04932 14L23.566 1" stroke="inherit"/>
+                </svg>                  
               </div>
             <copyright class="container-maintenance--copyright">
                 <p class="maintenance--copyright-p">Copyright 2023 Chris Edwards Design.</p>
