--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
         <section class="container-maintenance">
             <div class="maintenance--info">
                 <div class="maintenance--content">
-                    <h1 class="maintenance--title">CHRIS EDWARDS</h1>
-                    <h2 class="maintenance--title">DESIGN + UX + CODE</h2>
+                    <h1 class="maintenance--title">CHRIS EDWARDS DESIGN + UX + CODE</h1>
+                    <!-- <h2 class="maintenance--title">DESIGN + UX + CODE</h2> -->
                 </div>
-                <div class="maintenance--content">
+                <div class="maintenance--content-2">
                     <p class="maintenance--message">UNDER MAINTENANCE</p>
                     <div class="container-countdown--mob">
                         <h2 class="maintenance--title-h2">LIVE:</h2>
