--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
                 <span id="contMove" class="maintenance--game-btn">COMING SOON</span>
             </div>
             <form id="formPosition" class="maintenance-container--form form-slide-left" action="mailto:chris@chrisedwardsdesign.com" method="POST" enctype="multipart/form-data" user-scalable="no">
-                <div id="drawerTriggerClose" class="maintenance--input maintenance--input-header-bg-scolor maintenance--form-marquee-container">
+                <div id="maintenance--svg-trigger-1" class="maintenance--input maintenance--input-header-bg-scolor maintenance--form-marquee-container">
                   <marquee class="maintenance--title-h2 maintenance--form-marque">ALL ENQUIRIES: chris@chrisedwardsdesign.com</marquee>
-                  <div id="maintenance--svg-trigger-1" class="maintenance--svg-container">
+                  <!-- <div id="maintenance--svg-trigger-1" class="maintenance--svg-container">
                     <svg id="drawerTriggerMinusSvg" class="maintenance--svg-close" width="auto" height="auto" viewBox="0 0 19 1" fill="inherit" xmlns="http://www.w3.org/2000/svg">
                       <path d="M18.6924 0.5H0.307617" stroke="#151714"/>
                     </svg>
@@ -45,13 +45,13 @@
                     <svg id="drawerTriggerCloseSvg" class="maintenance--svg-close svg-hide" width="auto" height="1auto5" viewBox="0 0 24 15" fill="inherit" xmlns="http://www.w3.org/2000/svg">
                       <path d="M1.04932 1L23.566 14" stroke="inherit"/>
                       <path d="M1.04932 14L23.566 1" stroke="inherit"/>
-                    </svg>
+                    </svg> -->
 
                     <!-- <svg id="drawerTriggerCloseSvg" class="maintenance--svg-close svg-hide" width="auto" height="auto" viewBox="0 0 13 13" fill="inherit" xmlns="http://www.w3.org/2000/svg">
                       <path d="M14 14L1 1" stroke="#151714"/>
                       <path d="M1 14L14 1" stroke="#151714"/>
                     </svg>    -->
-                  </div>                 
+                  <!-- </div>                  -->
                 </div>
                 <div class="maintenance--input">
                   <label for="name">NAME:</label>
