--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
                 </div>
                 <div class="maintenance--input">
                   <button id="maintenance--form-submit" user-scalable="no" type="submit">SUBMIT
-                    <svg class="maintenance--form-submit--svg"  width="auto" height="auto" viewBox="0 0 20 20" fill="inherit" xmlns="http://www.w3.org/2000/svg">
+                    <!-- <svg class="maintenance--form-submit--svg"  width="auto" height="auto" viewBox="0 0 20 20" fill="inherit" xmlns="http://www.w3.org/2000/svg">
                       <path d="M13 16L19 10L13 4" stroke="inherit"/>
                       <path d="M0.615225 10H19" stroke="inherit"/>
-                    </svg>   
+                    </svg>    -->
                   </button>
                 </div>
               </form>
@@ -92,7 +92,7 @@
                 </svg>                  
               </div>
             <copyright class="container-maintenance--copyright">
-                <p class="maintenance--copyright-p">Copyright 2023 Chris Edwards Design.</p>
+                <p class="maintenance--copyright-p">© Copyright 2023 Chris Edwards Design</p>
             </copyright>
         </section>
 </body>
