--- a/index.html
+++ b/index.html
@@ -54,16 +54,16 @@
                   <!-- </div>                  -->
                 </div>
                 <div class="maintenance--input">
-                  <label for="name">NAME:</label>
-                  <input type="text" id="name" name="name" placeholder="your name" user-scalable="no" required>
+                  <input type="text" id="name" name="name" placeholder="FIRST NAME" user-scalable="no" required>
+                  <label for="name">NAME</label>
                 </div>
                 <div class="maintenance--input">
-                  <label for="email">EMAIL:</label>
-                  <input type="email" id="email" name="email" placeholder="your email" ruser-scalable="no" equired>
+                  <input type="email" id="email" name="email" placeholder="EMAIL ADDRESS" ruser-scalable="no" equired>
+                  <label for="email">EMAIL</label>
                 </div>
                 <div class="maintenance--input">
-                  <label for="message" class="maintenance--input--message">MESSAGE:</label>
-                  <textarea id="message" name="message" placeholder="write a message" user-scalable="no" required></textarea>
+                  <textarea id="message" name="message" placeholder="MESSAGE" user-scalable="no" required></textarea>
+                  <label for="message" class="maintenance--input--message">MESSAGE</label>
                 </div>
                 <div class="maintenance--input">
                   <button id="maintenance--form-submit" user-scalable="no" type="submit">SUBMIT
