--- a/index.html
+++ b/index.html
@@ -21,10 +21,9 @@
             <div class="maintenance--info">
                 <div class="maintenance--content">
                     <h1 class="maintenance--title">CHRIS EDWARDS DESIGN + UX + CODE</h1>
-                    <!-- <h2 class="maintenance--title">DESIGN + UX + CODE</h2> -->
                 </div>
                 <div class="maintenance--content-2">
-                    <p class="maintenance--message">UNDER MAINTENANCE</p>
+                    <!-- <p class="maintenance--message">UNDER MAINTENANCE</p> -->
                     <div class="container-countdown--mob">
                         <h2 class="maintenance--title-h2">LIVE:</h2>
                         <div id="countdownTimerMob" class="maintenance--time"></div>
@@ -36,41 +35,22 @@
             </div>
             <form id="formPosition" class="maintenance-container--form form-slide-left" action="mailto:chris@chrisedwardsdesign.com" method="POST" enctype="multipart/form-data" user-scalable="no">
                 <div id="maintenance--svg-trigger-1" class="maintenance--input maintenance--input-header-bg-scolor maintenance--form-marquee-container">
-                  <marquee class="maintenance--title-h2 maintenance--form-marque">ALL ENQUIRIES: chris@chrisedwardsdesign.com</marquee>
-                  <!-- <div id="maintenance--svg-trigger-1" class="maintenance--svg-container">
-                    <svg id="drawerTriggerMinusSvg" class="maintenance--svg-close" width="auto" height="auto" viewBox="0 0 19 1" fill="inherit" xmlns="http://www.w3.org/2000/svg">
-                      <path d="M18.6924 0.5H0.307617" stroke="#151714"/>
-                    </svg>
-
-                    <svg id="drawerTriggerCloseSvg" class="maintenance--svg-close svg-hide" width="auto" height="1auto5" viewBox="0 0 24 15" fill="inherit" xmlns="http://www.w3.org/2000/svg">
-                      <path d="M1.04932 1L23.566 14" stroke="inherit"/>
-                      <path d="M1.04932 14L23.566 1" stroke="inherit"/>
-                    </svg> -->
-
-                    <!-- <svg id="drawerTriggerCloseSvg" class="maintenance--svg-close svg-hide" width="auto" height="auto" viewBox="0 0 13 13" fill="inherit" xmlns="http://www.w3.org/2000/svg">
-                      <path d="M14 14L1 1" stroke="#151714"/>
-                      <path d="M1 14L14 1" stroke="#151714"/>
-                    </svg>    -->
-                  <!-- </div>                  -->
+                  <marquee class="maintenance--title-h2 maintenance--uppercase maintenance--form-marque">ALL ENQUIRIES: chris@chrisedwardsdesign.com</marquee>
                 </div>
                 <div class="maintenance--input">
-                  <input type="text" id="name" name="name" placeholder="FIRST NAME" user-scalable="no" required>
-                  <label for="name">NAME</label>
+                  <input class="maintenance--uppercase" type="text" id="name" name="name" placeholder="First name" user-scalable="no" required>
+                  <label for="name">NAME*</label>
                 </div>
                 <div class="maintenance--input">
-                  <input type="email" id="email" name="email" placeholder="EMAIL ADDRESS" ruser-scalable="no" equired>
-                  <label for="email">EMAIL</label>
+                  <input class="maintenance--uppercase" type="email" id="email" name="email" placeholder="Your email address" ruser-scalable="no" equired>
+                  <label for="email">EMAIL*</label>
                 </div>
                 <div class="maintenance--input">
-                  <textarea id="message" name="message" placeholder="MESSAGE" user-scalable="no" required></textarea>
-                  <label for="message" class="maintenance--input--message">MESSAGE</label>
+                  <textarea id="message" class="maintenance--uppercase" name="message" placeholder="Write your message" user-scalable="no" required></textarea>
+                  <label for="message" class="maintenance--input--message">MESSAGE*</label>
                 </div>
                 <div class="maintenance--input">
-                  <button id="maintenance--form-submit" user-scalable="no" type="submit">SUBMIT
-                    <!-- <svg class="maintenance--form-submit--svg"  width="auto" height="auto" viewBox="0 0 20 20" fill="inherit" xmlns="http://www.w3.org/2000/svg">
-                      <path d="M13 16L19 10L13 4" stroke="inherit"/>
-                      <path d="M0.615225 10H19" stroke="inherit"/>
-                    </svg>    -->
+                  <button id="maintenance--form-submit" class="maintenance--uppercase" user-scalable="no" type="submit">SUBMIT
                   </button>
                 </div>
               </form>
@@ -81,18 +61,20 @@
             </div>
             <div id="formTriggerOpen" class="container-maintenance--contact">
                 <h3 class="maintenance--contact-h3">CONTACT</h3>
-                <svg id="burgerOpen" class="maintenance--svg-close" width="auto" height="auto" viewBox="0 0 27 15" fill="inherit" xmlns="http://www.w3.org/2000/svg">
-                  <path d="M0.307617 7.5H26.3076" stroke="inherit"/>
-                  <path d="M0.307617 14H26.3076" stroke="inherit"/>
-                  <path d="M0.307617 1H26.3076" stroke="inherit"/>
+                <!-- hamburger menu -->
+                <svg id="burgerOpen" class="maintenance--svg-close" width="14" height="14" viewBox="0 0 14 14" fill="inherit" xmlns="http://www.w3.org/2000/svg">
+                  <path fill-rule="evenodd" clip-rule="evenodd" d="M14 7.5H0V6.5H14V7.5Z" fill="inherit"/>
+                  <path fill-rule="evenodd" clip-rule="evenodd" d="M14 14H0V13H14V14Z" fill="inherit"/>
+                  <path fill-rule="evenodd" clip-rule="evenodd" d="M14 1H0V0H14V1Z" fill="inherit"/>
+                  </svg>
+                <svg id="burgerClose" class="maintenance--svg-close-2 svg-hide" width="15" height="14" viewBox="0 0 15 14" fill="inherit" xmlns="http://www.w3.org/2000/svg">
+                  <path fill-rule="evenodd" clip-rule="evenodd" d="M13.2789 14.0012L0 0.722279L0.722279 0L14.0012 13.2789L13.2789 14.0012Z" fill="inherit"/>
+                  <path fill-rule="evenodd" clip-rule="evenodd" d="M7.3742e-07 13.2789L13.2789 -3.15629e-08L14.0012 0.722279L0.722281 14.0012L7.3742e-07 13.2789Z" fill="inherit"/>
                 </svg>
-                <svg id="burgerClose" class="maintenance--svg-close-2 svg-hide" width="auto" height="1auto5" viewBox="0 0 24 15" fill="inherit" xmlns="http://www.w3.org/2000/svg">
-                  <path d="M1.04932 1L23.566 14" stroke="inherit"/>
-                  <path d="M1.04932 14L23.566 1" stroke="inherit"/>
-                </svg>                  
               </div>
             <copyright class="container-maintenance--copyright">
                 <p class="maintenance--copyright-p">© Copyright 2023 Chris Edwards Design</p>
+                <p class="maintenance--message">* UNDER MAINTENANCE</p>
             </copyright>
         </section>
 </body>
