--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta http-equiv='expires' content='0'> 
     <meta http-equiv='pragma' content='no-cache'>
 
-    <title>© Copyright 2023 Chris Edwards / Design UX Code</title>
+    <title>© Copyright 2023 Chris Edwards / Design Animation UX Code</title>
     <link rel="stylesheet" href="styles/styles.css">
     <link rel="stylesheet" href="styles/cdev-grid-boiler-plate.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -25,7 +25,8 @@
         <section class="container-maintenance">
             <div class="maintenance--info">
                 <div class="maintenance--content">
-                    <h1 class="maintenance--title">CHRIS EDWARDS DESIGN + UX + CODE</h1>
+                    <h1 class="maintenance--title">CHRIS EDWARDS DESIGN</h1>
+                    <h1 class="maintenance--title">DESIGN + ANIMTATION + UX + CODE</h1>
                 </div>
                 <div class="maintenance--content-2">
                     <!-- <p class="maintenance--message">UNDER MAINTENANCE</p> -->
@@ -78,9 +79,12 @@
                 </svg>
               </div>
             <copyright class="container-maintenance--copyright">
-                <p class="maintenance--copyright-p">© Copyright 2023 Chris Edwards Design</p>
-                <p class="maintenance--message">* UNDER MAINTENANCE</p>
+              <p class="maintenance--message">* UNDER MAINTENANCE</p>
+              <p class="maintenance--copyright-p">© Copyright 2023 Chris Edwards Design</p>
             </copyright>
+            <div class="maintenance--version-container">
+              <p class="maintenance--version-history">CDAUXC V1.0</p>
+            </div>
         </section>
 </body>
 </html>
