--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <meta http-equiv='cache-control' content='no-cache'>
+    <meta http-equiv='cache-control' content='no-cache'> 
     <meta http-equiv='expires' content='0'> 
-    <meta http-equiv='pragma' content='no-cache'> 
+    <meta http-equiv='pragma' content='no-cache'>
 
     <title>© Copyright 2023 Chris Edwards / Design Animation UX Code</title>
     <link rel="stylesheet" href="styles/styles.css">
@@ -26,7 +26,7 @@
             <div class="maintenance--info">
                 <div class="maintenance--content">
                     <h1 class="maintenance--title">CHRIS EDWARDS DESIGN</h1>
-                    <h1 class="maintenance--title">DESIGN + ANIMTATION + UX + CODE</h1>
+                    <h1 class="maintenance--title">DESIGN + ANIMATION + UX + CODE</h1>
                 </div>
                 <div class="maintenance--content-2">
                     <!-- <p class="maintenance--message">UNDER MAINTENANCE</p> -->
@@ -39,27 +39,28 @@
             <div id="contParent" class="maintenance--game-container">
                 <span id="contMove" class="maintenance--game-btn">COMING SOON</span>
             </div>
-            <form id="formPosition" class="maintenance-container--form form-slide-left" action="mailto:chris@chrisedwardsdesign.com" method="POST" enctype="multipart/form-data" user-scalable="no">
-                <div id="maintenance--svg-trigger-1" class="maintenance--input maintenance--input-header-bg-scolor maintenance--form-marquee-container">
-                  <marquee class="maintenance--title-h2 maintenance--uppercase maintenance--form-marque">ALL ENQUIRIES: chris@chrisedwardsdesign.com</marquee>
-                </div>
-                <div class="maintenance--input">
-                  <input class="maintenance--uppercase" type="text" id="name" name="name" placeholder="First name" user-scalable="no" required>
-                  <label for="name">NAME*</label>
-                </div>
-                <div class="maintenance--input">
-                  <input class="maintenance--uppercase" type="email" id="email" name="email" placeholder="Your email address" ruser-scalable="no" equired>
-                  <label for="email">EMAIL*</label>
-                </div>
-                <div class="maintenance--input">
-                  <textarea id="message" class="maintenance--uppercase" name="message" placeholder="Write your message" user-scalable="no" required></textarea>
-                  <label for="message" class="maintenance--input--message">MESSAGE*</label>
-                </div>
-                <div class="maintenance--input">
-                  <button id="maintenance--form-submit" class="maintenance--uppercase" user-scalable="no" type="submit">SUBMIT
-                  </button>
-                </div>
-              </form>
+            <form id="formPosition" class="maintenance-container--form form-slide-left" action="https://docs.google.com/forms/d/e/1FAIpQLSfd30xNxtmaSitVZUQs65ghJB6vHuoFERMlEymH8HaGGbG5WQ/formResponse" method="POST" target="_blank">
+              <div id="maintenance--svg-trigger-1" class="maintenance--input maintenance--input-header-bg-scolor maintenance--form-marquee-container">
+                <marquee class="maintenance--title-h2 maintenance--uppercase maintenance--form-marque">ALL ENQUIRIES: chris@chrisedwardsdesign.com</marquee>
+              </div>
+              <div class="maintenance--input">
+                <input class="maintenance--uppercase" type="text" id="name" name="entry.2005620554" placeholder="First name" user-scalable="no" required>
+                <label for="name">NAME*</label>
+              </div>
+              <div class="maintenance--input">
+                <input class="maintenance--uppercase" type="email" id="email" name="entry.1045781291" placeholder="Your email address" ruser-scalable="no" equired>
+                <label for="email">EMAIL*</label>
+              </div>
+              <div class="maintenance--input">
+                <textarea id="message" class="maintenance--uppercase" name="entry.839337160" placeholder="Write your message" user-scalable="no" required></textarea>
+                <label for="message" class="maintenance--input--message">MESSAGE*</label>
+              </div>
+              <div class="maintenance--input">
+                <button id="maintenance--form-submit" class="maintenance--uppercase" user-scalable="no" type="submit">SUBMIT
+                </button>
+              </div>
+            </form>            
+            
             <div id="formOverlay" class="maintenance--form-overlay form-hide"></div>
             <div class="container-countdown--desk">
                 <div id="countdownTimerDesk" class="maintenance--time"></div>
@@ -83,7 +84,7 @@
               <p class="maintenance--copyright-p">© Copyright 2023 Chris Edwards Design</p>
             </copyright>
             <div class="maintenance--version-container">
-              <p class="maintenance--version-history">CDAUXC V1.0</p>
+              <p class="maintenance--version-history">CDAUX V1.0</p>
             </div>
         </section>
 </body>
