--- a/index.html
+++ b/index.html
@@ -44,16 +44,16 @@
                 <marquee class="maintenance--title-h2 maintenance--uppercase maintenance--form-marque">ALL ENQUIRIES: chris@chrisedwardsdesign.com</marquee>
               </div>
               <div class="maintenance--input">
-                <input class="maintenance--uppercase" type="text" id="name" name="entry.2005620554" placeholder="First name" user-scalable="no" required>
-                <label for="name">NAME*</label>
+                <input class="" type="text" id="name" name="entry.2005620554" placeholder="NAME *" user-scalable="no" required>
+                <label for="name">NAME</label>
               </div>
               <div class="maintenance--input">
-                <input class="maintenance--uppercase" type="email" id="email" name="entry.1045781291" placeholder="Your email address" ruser-scalable="no" equired>
-                <label for="email">EMAIL*</label>
+                <input class="" type="email" id="email" name="entry.1045781291" placeholder="EMAIL ADDRESS *" ruser-scalable="no" equired>
+                <label for="email">EMAIL</label>
               </div>
               <div class="maintenance--input">
-                <textarea id="message" class="maintenance--uppercase" name="entry.839337160" placeholder="Write your message" user-scalable="no" required></textarea>
-                <label for="message" class="maintenance--input--message">MESSAGE*</label>
+                <textarea id="message" class="" name="entry.839337160" placeholder="GET IN TOUCH *" user-scalable="no" required></textarea>
+                <label for="message" class="maintenance--input--message">MESSAGE</label>
               </div>
               <div class="maintenance--input">
                 <button id="maintenance--form-submit" class="maintenance--uppercase" user-scalable="no" type="submit">SUBMIT
