--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <section class="container-maintenance">
             <div class="maintenance--info">
                 <div class="maintenance--content">
-                    <h1 class="maintenance--title">CHRIS EDWARDS DESIGN</h1>
+                    <h1 class="maintenance--title">CHRIS EDWARDS</h1>
                     <h1 class="maintenance--title">DESIGN + ANIMATION + UX + CODE</h1>
                 </div>
                 <div class="maintenance--content-2">
