--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <div id="contParent" class="maintenance--game-container">
                 <span id="contMove" class="maintenance--game-btn">COMING SOON</span>
             </div>
-            <form id="formPosition" class="maintenance-container--form form-slide-left" action="https://docs.google.com/forms/d/e/1FAIpQLSfd30xNxtmaSitVZUQs65ghJB6vHuoFERMlEymH8HaGGbG5WQ/formResponse" method="POST" target="_blank">
+            <form id="formPosition" class="maintenance-container--form form-slide-left" action="https://docs.google.com/forms/d/e/1FAIpQLSfd30xNxtmaSitVZUQs65ghJB6vHuoFERMlEymH8HaGGbG5WQ/formResponse" method="POST">
               <div id="maintenance--svg-trigger-1" class="maintenance--input maintenance--input-header-bg-scolor maintenance--form-marquee-container">
                 <marquee class="maintenance--title-h2 maintenance--uppercase maintenance--form-marque">ALL ENQUIRIES: chris@chrisedwardsdesign.com</marquee>
               </div>
