--- a/index.html
+++ b/index.html
@@ -39,27 +39,27 @@
             <div id="contParent" class="maintenance--game-container">
                 <span id="contMove" class="maintenance--game-btn">COMING SOON</span>
             </div>
-            <form id="formPosition" class="maintenance-container--form form-slide-left" action="https://docs.google.com/forms/d/e/1FAIpQLSfd30xNxtmaSitVZUQs65ghJB6vHuoFERMlEymH8HaGGbG5WQ/formResponse" method="POST">
+            
+            <form id="formPosition" class="maintenance-container--form form-slide-left" action="https://formspree.io/f/mzbqwbol" method="POST">
               <div id="maintenance--svg-trigger-1" class="maintenance--input maintenance--input-header-bg-scolor maintenance--form-marquee-container">
-                <marquee class="maintenance--title-h2 maintenance--uppercase maintenance--form-marque">ALL ENQUIRIES: chris@chrisedwardsdesign.com</marquee>
+                <h3 class="maintenance--form-title-h3 maintenance--uppercase maintenance--form-marque">ALL ENQUIRIES: chris@chrisedwardsdesign.com</h3>
               </div>
               <div class="maintenance--input">
-                <input class="" type="text" id="name" name="entry.2005620554" placeholder="NAME *" user-scalable="no" required>
+                <input class="" type="text" id="name" name="name" placeholder="NAME *" user-scalable="no" required>
                 <label for="name">NAME</label>
               </div>
               <div class="maintenance--input">
-                <input class="" type="email" id="email" name="entry.1045781291" placeholder="EMAIL ADDRESS *" ruser-scalable="no" equired>
+                <input class="" type="email" id="email" name="email" placeholder="EMAIL ADDRESS *" user-scalable="no" equired>
                 <label for="email">EMAIL</label>
               </div>
               <div class="maintenance--input">
-                <textarea id="message" class="" name="entry.839337160" placeholder="GET IN TOUCH *" user-scalable="no" required></textarea>
+                <textarea id="message" class="" name="message" placeholder="GET IN TOUCH *" user-scalable="no" required></textarea>
                 <label for="message" class="maintenance--input--message">MESSAGE</label>
               </div>
               <div class="maintenance--input">
-                <button id="maintenance--form-submit" class="maintenance--uppercase" user-scalable="no" type="submit">SUBMIT
-                </button>
+                <button id="maintenance--form-submit" class="maintenance--uppercase" user-scalable="no" type="submit">SUBMIT</button>
               </div>
-            </form>            
+            </form> 
             
             <div id="formOverlay" class="maintenance--form-overlay form-hide"></div>
             <div class="container-countdown--desk">
